...
              testID="sector-type-input"
              value={trade.sectorType}
            />
          </View>
        </View>
        <FormTextField
          label="Quote source ID"
          onChangeText={(value) => {
            trade.setQuoteSourceId(value);
            trade.clearSelectedAsset();
          }}
          placeholder="RELIANCE.NS"
          testID="quote-source-id-input"
...
